--- a/_posts/2015-03-16-start.md
+++ b/_posts/2015-03-16-start.md
@@ -12,8 +12,8 @@ tags: [start]
 ---
 ###写博客的缘由
 记录已经成为我们生活的一部分。写博客可以 
-－总结深入理解
-－吐槽，记录生活点滴
+*总结深入理解
+*吐槽，记录生活点滴
 
 ###新手报道
 我是新手， 并且愿意在这里一步一步记录成长的轨迹，希望不要有了这个博客之后，　然后呢，就没有了然后。
