--- a/_posts/2015-03-16-start.md
+++ b/_posts/2015-03-16-start.md
@@ -9,7 +9,7 @@ tags: [start]
 ###博客开篇
 大家好我是露敏陈,这是我的第一个篇博客,希望能够和大家互相交流,分享,相互学习相互进步.
 
-
+---
 ###写博客的缘由
 记录已经成为我们生活的一部分。写博客可以   
 
@@ -21,4 +21,5 @@ tags: [start]
 
 ###新手报道
 我是新手， 并且愿意在这里一步一步记录成长的轨迹，希望不要有了这个博客之后，　然后呢，就没有了然后。
-:)  
+:)当然啦；因为是第一篇博客，所以还是想吐槽下和总结下最近的生活。　　
+感谢曾经遇到过的人，给我的鼓励，给我指明了方向，还有告诉我如何成为更好的人。：）爱在信口难开啊：）所以大家好好爱你身边的人啊。不至于不能去复试吧，每天都要尽我所能去争取这个名额。直挂云帆济沧海：）—
