--- a/_posts/2015-04-13-new-start.md
+++ b/_posts/2015-04-13-new-start.md
@@ -11,7 +11,9 @@ tags: [随想]
 憋不出几句话啊。用点总结
 
 * 2014年做一件事就是考研跨考，但是没有成功。
-'原因：究其自身，底子不够硬，初试没能考个前几名，学校太烂第一印象被贴标签。'
+
+`原因：究其自身，底子不够硬，初试没能考个前几名，学校太烂第一印象被贴标签。
+
 * 复试完之后，我也难受了一下，总不能一次的高考让自己背负一辈子吧，不过俺认了。不应该难受。娘娘腔。
 * 还有对我比较期待的那些人，只能说不好意思啦，不过我会努力回归的。我会感谢失败所带给我的。
 * 之后的打算，先自我完善下求职中所需要的一些技能然后工作先。
