--- a/_posts/2015-03-16-start.md
+++ b/_posts/2015-03-16-start.md
@@ -20,6 +20,7 @@ tags: [start]
 ---
 
 ###新手报道
+考研的过程中也在cnblogs写过几篇[传送门]:http://www.cnblogs.com/clm-beigong/以后文章主要po在这里:)
 我是新手， 并且愿意在这里一步一步记录成长的轨迹，希望不要有了这个博客之后，　然后呢，就没有了然后。
 :)当然啦；因为是第一篇博客，所以还是想吐槽下和总结下最近的生活。　　
 感谢曾经遇到过的人，给我的鼓励，给我的帮助，给我指明了方向，还有告诉我如何成为更好的人。：）
