--- a/_posts/2015-04-13-new-start.md
+++ b/_posts/2015-04-13-new-start.md
@@ -7,7 +7,7 @@ tags: [随想]
 ---
 {% include JB/setup %}
 ###感悟
-对啦，今年考研失败。让我更加明白了院校鄙视的感觉是怎样的。居于内因本身也是有问题的。不过我并不承认我自己比其他人差啊。这点先说明下。以前总能莫名其妙的就嚎个几小时，而现在死活
+对啦，今年考研失败。让我更加明白了院校鄙视的感觉是怎样的,话说回来，被别人意识也是很好的成长方式。居于内因本身也是有问题的。不过我并不承认我自己比其他人差啊。这点先说明下。以前总能莫名其妙的就嚎个几小时，而现在死活
 憋不出几句话啊。用点总结
 
 * 2014年做一件事就是考研跨考，但是没有成功。 
@@ -23,5 +23,7 @@ tags: [随想]
 * 其实我有好多好多想说的，但是这些情绪垃圾基本上都被我扔进了心里某个角落，我也找不回来。  
 
 * 希望远在家乡的爸妈，姐姐，亲人朋友都能身心健康。  
+
+* 珍惜时光莫放松。
 
 * inspire
