--- a/_posts/2015-04-13-new-start.md
+++ b/_posts/2015-04-13-new-start.md
@@ -7,12 +7,10 @@ tags: [随想]
 ---
 {% include JB/setup %}
 ###感悟
-对啦，今年考研失败。让我更加明白了院校鄙视的感觉是怎样的,话说回来，被别人意识也是很好的成长方式。居于内因本身也是有问题的。不过我并不承认我自己比其他人差啊。这点先说明下。以前总能莫名其妙的就嚎个几小时，而现在死活
+对啦，今年考研失败。让我更加明白了院校鄙视的感觉是怎样的,话说回来，被别人鄙视也是很好的成长方式。居于内因本身也是有问题的。不过我并不承认我自己比其他人差啊。这点先说明下。以前总能莫名其妙的就嚎个几小时，而现在死活
 憋不出几句话啊。用点总结
 
-* 2014年做一件事就是考研跨考，但是没有成功。 
-
-原因：究其自身，底子不够硬，初试没能考个前几名，学校太烂第一印象被贴标签。
+* 2014年做一件事就是考研跨考，但是没有成功.原因：究其自身，底子不够硬，初试没能考个前几名，学校太烂第一印象被贴标签。
 
 * 复试完之后，我也难受了一下，总不能一次的高考让自己背负一辈子吧，不过俺认了。不应该难受。娘娘腔。  
 
