--- a/_posts/2015-03-16-start.md
+++ b/_posts/2015-03-16-start.md
@@ -24,4 +24,4 @@ tags: [start]
 我是新手， 并且愿意在这里一步一步记录成长的轨迹，希望不要有了这个博客之后，　然后呢，就没有了然后。
 :)当然啦；因为是第一篇博客，所以还是想吐槽下和总结下最近的生活。　　
 感谢曾经遇到过的人，给我的鼓励，给我的帮助，给我指明了方向，还有告诉我如何成为更好的人。：）
-<embed src="http://music.163.com/style/swf/widget.swf?sid=4010812&type=2&auto=1&width=320&height=66" width="340" height="86"  allowNetworking="all"></embed>
+<embed src="http://music.163.com/style/swf/widget.swf?sid=4010812&type=2&auto=1&width=320&height=66" width="340" height="86"  allowNetworking="all">
