--- a/_posts/2015-04-13-new-start.md
+++ b/_posts/2015-04-13-new-start.md
@@ -24,4 +24,7 @@ tags: [随想]
 
 * 珍惜时光莫放松。
 
-* 最后送上一首歌[inspire](http://music.163.com/#/song?id=4010812):)直接点击
+* 最后送上一首歌[inspire](http://music.163.com/#/song?id=4010812):)
+
+
+　　<embed src="http://music.163.com/style/swf/widget.swf?sid=4010812&type=2&auto=1&width=320&height=66" width="340" height="86"  allowNetworking="all">
